Fix font & phone alignment issue

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Tiro+Bangla&display=swap");
 $primary: #e50914;
 $secondary: #13161d;
 $warning: #f8bc24;
@@ -20,8 +19,8 @@ $h4-font-size: 1.5rem; // 24px
 $h5-font-size: 1.125rem; // 18px
 $h6-font-size: 0.875rem; // 14px
 $headings-margin-bottom: 0px;
-$font-family-base: "Tiro Bangla", serif;
-$headings-font-family: "Tiro Bangla", serif;
+// $font-family-base: 'Baloo Da 2', 'cursive';
+// $headings-font-family: 'Baloo Da 2', 'cursive';
 $headings-font-weight: 700;
 $navbar-padding-y: 0;
 $navbar-nav-link-padding-x: 28px;
@@ -30,7 +29,7 @@ $input-btn-padding-y: 10px;
 $input-btn-padding-x: 18px;
 $btn-border-radius: 0px;
 // $btn-font-weight: 700;
-$btn-hover-color: #1040ba;
+$btn-hover-color: #e50914;
 $input-bg: transparent;
 $input-border-radius: 4px;
 $input-border-color: #cad5e0;
